# beyond-shunya

./: .gitignore  README.md  _publish.yml  _quarto.yml  blog.qmd  bookshelf.qmd  custom.scss  essays.qmd  index.qmd  posts.qmd  pyproject.toml  styles.css
.cursor/rules/: project-description.mdc
.github/workflows/: publish.yml
.quarto/idx/: bookshelf.qmd.json  essays.qmd.json  index.qmd.json
.quarto/idx/essays/: interview-readiness.qmd.json  (+1 more)
.quarto/listing/: listing-cache.json
.quarto/xref/: 7f434588  INDEX  db7947d6
_extensions/applause/: _extension.yml  applause.lua
_extensions/socials/: _extension.yml  socials.lua
_output/: robots.txt  search.json  sitemap.xml
_output/socials/: example.html
blog/: alpha-evolve.qmd  dos-rag.ipynb  dos-rag.qmd  india-d2c-story.qmd  journal-your-curiosity.qmd  read-protocols.qmd
books/: listing.yaml
bookshelf/: mastery.qmd
docs/: TODO.html  about.html  blog.html  books.html  bookshelf.html  essays.html  index.html  listings.json  search.json  sitemap.xml  styles.css  weblog.html
docs/blog/: execution.html  interview-readiness.html  journal-your-curiosity.html  read-protocols.html
docs/books/: listing.html  mastery-by-robert-green.html  mastery.html
docs/bookshelf/: bookshelf.html  mastery-by-robert-green.html  mastery.html
docs/essays/: execution.html  interview-readiness.html  journal-your-curiosity.html
docs/internal/: TODO.html
docs/posts/: interview-readiness.html  journal-your-curiosity.html
essays/: interview-readiness.qmd  journal-your-curiosity.qmd
templates/: bookshelf.ejs
(+7 files in other folders)
