[project]
name = "beyond-shunya"
version = "0.1.0"
description = "Blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyterlab-quarto>=0.3.5",
    "jupyterlab>=4.4.3",
    "llama-index>=0.12.44",
    "matplotlib>=3.10.3",
    "pymupdf4llm>=0.0.25",
    "pymupdf>=1.26.1",
]
